--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tinder",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "@hookform/resolvers": "^5.2.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "axios": "^1.12.1",
+    "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.4",
+    "expo-camera": "~17.0.7",
+    "expo-constants": "~18.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.2",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4"
+    "lucide-react-native": "^0.544.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-native": "0.81.4",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
