--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@tanstack/react-query": "^5.89.0",
     "axios": "^1.12.1",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.4",
