--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@tanstack/react-query": "^5.89.0",
     "axios": "^1.12.1",
     "babel-preset-expo": "~54.0.0",
     "expo": "~54.0.4",
     "expo-camera": "~17.0.7",
     "expo-constants": "~18.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.2",
     "expo-status-bar": "~3.0.8",
@@ -27,8 +29,10 @@
     "react-hook-form": "^7.62.0",
     "react-native": "0.81.4",
     "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-worklets": "^0.5.1",
     "zod": "^4.1.8"
   },
   "devDependencies": {
